Added --kube option to run server in local (dev) mode or k8s (prod) mode

--- a/deploy/004-nextflow-server.yaml
+++ b/deploy/004-nextflow-server.yaml
@@ -20,7 +20,7 @@ spec:
         command:
         - /bin/bash
         - -c
-        - cd /opt/nextflow-gke; python3 server.py
+        - cd /opt/nextflow-gke; python3 server.py --kube true
         resources:
           requests:
             cpu: 1
