Added ability to customize input/output directory names

--- a/deploy/004-nextflow-server.yaml
+++ b/deploy/004-nextflow-server.yaml
@@ -17,6 +17,9 @@ spec:
       containers:
       - name: nextflow-server
         image: bentsherman/nextflow-gke
+        env:
+        - name: NEXTFLOW_K8S
+          value: "true"
         command:
         - /bin/bash
         - -c
