--- a/deploy/04-nextflow-server-gke.yaml
+++ b/deploy/04-nextflow-server-gke.yaml
@@ -18,34 +18,32 @@ spec:
       - name: nextflow-server
         image: cbmckni/scidas-submitter:gke
         command: ["/bin/sh","-c"]
-        args: ["echo ${PROJECTKEY} > /home/credential_key.json && cat /home/credential_key.json && gcloud auth activate-service-account --key-file=/home/credential_key.json && gcloud config set project ${PROJECTID} && gcloud container clusters get-credentials ${CLUSTERID} && cd /opt/nextflow-gke; python3 server.py --kube true"]
+        args: ['printf "%s" "${PROJECTKEY}" > "/home/credential-key.json" && gcloud auth activate-service-account --key-file /home/credential-key.json && gcloud config set project ${PROJECTID} && gcloud container clusters get-credentials ${CLUSTERID} --zone=${ZONE} --project=${PROJECTID} && cd /opt/nextflow-gke; python3 server.py --kube true']
         env:
-        # Define the environment variable
         - name: PROJECTID
           valueFrom:
             configMapKeyRef:
-              # The ConfigMap 
               name: nextflow-server-config
-              # Specify the key associated with the value
               key: project.id
         - name: PROJECTKEY
           valueFrom:
             configMapKeyRef:
-              # The ConfigMap 
               name: nextflow-server-config
-              # Specify the key associated with the value
               key: project.key
         - name: CLUSTERID
           valueFrom:
             configMapKeyRef:
-              # The ConfigMap 
               name: nextflow-server-config
-              # Specify the key associated with the value
               key: project.cluster
+        - name: ZONE
+          valueFrom:
+            configMapKeyRef:
+              name: nextflow-server-config
+              key: project.zone
         resources:
           requests:
-            cpu: 500m
-            memory: 2Gi
+            cpu: 250m
+            memory: 1Gi
         volumeMounts:
         - name: vol-1
           mountPath: /workspace
@@ -58,32 +56,4 @@ spec:
           claimName: clemson-pvc
 
         # RUN "kubectl expose deployment nextflow-server-deployment --type=LoadBalancer --name=nextflow-server-service" after deployment to expose
----
-apiVersion: v1
-kind: Service
-metadata:
-  creationTimestamp: "2019-07-16T21:00:27Z"
-  labels:
-    app.kubernetes.io/name: load-balancer-nextflow
-  name: nextflow-server-service
-  namespace: default
-  resourceVersion: "364139"
-  selfLink: /api/v1/namespaces/default/services/nextflow-server-service
-  uid: bcb38592-a80c-11e9-abca-42010af001e9
-spec:
-  clusterIP: 10.126.1.58
-  externalTrafficPolicy: Cluster
-  ports:
-  - nodePort: 31190
-    port: 8080
-    protocol: TCP
-    targetPort: 8080
-  selector:
-    app.kubernetes.io/name: load-balancer-nextflow
-  sessionAffinity: None
-  type: LoadBalancer
-status:
-  loadBalancer:
-    ingress:
-    - ip: 35.243.213.224
 
