--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,11 +7,10 @@ EXPOSE 8080
 RUN apt-get -qq update \
 	&& apt-get -qq install -y curl default-jdk git python3 python3-pip
 
-# gcloud (required for GKE)
-
+# install gcloud (required for GKE)
 RUN echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list \
-    && apt-get install -y apt-transport-https ca-certificates apt-utils \
-    && curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+	&& apt-get install -y apt-transport-https ca-certificates apt-utils \
+	&& curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
 RUN apt-get update -y && apt-get install -y google-cloud-sdk
 
 # install nextflow
