--- a/deploy/003-nextflow-api-gke.yaml
+++ b/deploy/003-nextflow-api-gke.yaml
@@ -18,8 +18,10 @@ spec:
       - name: nextflow-api
         image: cbmckni/scidas-submitter:gke
         command: ["/bin/sh","-c"]
-        args: ['printf "%s" "${PROJECTKEY}" > "/home/credential-key.json" && gcloud auth activate-service-account --key-file /home/credential-key.json && gcloud config set project ${PROJECTID} && gcloud container clusters get-credentials ${CLUSTERID} --zone=${ZONE} --project=${PROJECTID} && cd /opt/nextflow-gke; python3 server.py --kube true']
+        args: ['printf "%s" "${PROJECTKEY}" > "/home/credential-key.json" && gcloud auth activate-service-account --key-file /home/credential-key.json && gcloud config set project ${PROJECTID} && gcloud container clusters get-credentials ${CLUSTERID} --zone=${ZONE} --project=${PROJECTID} && cd /opt/nextflow-api; python3 server.py']
         env:
+        - name: NEXTFLOW_K8S
+          value: "true"
         - name: PROJECTID
           valueFrom:
             configMapKeyRef:
@@ -56,4 +58,3 @@ spec:
           claimName: clemson-pvc
 
         # RUN "kubectl expose deployment nextflow-api-deployment --type=LoadBalancer --name=nextflow-api-service" after deployment to expose
-
