added helm deployment

--- a/deploy/001-nfs-server.yaml
+++ b/deploy/001-nfs-server.yaml
@@ -30,7 +30,7 @@ spec:
       volumes:
         - name: mypvc
           gcePersistentDisk:
-            pdName: gce-nfs-disk
+            pdName: scidas-cole-test-pd
             fsType: ext4
 ---
 apiVersion: v1
