--- a/deploy/002-pv-pvc.yaml
+++ b/deploy/002-pv-pvc.yaml
@@ -1,24 +1,24 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: scidas-cole-test-pvc
+  name: deepgtex-prp
 spec:
   capacity:
     storage: 200Gi
   accessModes:
     - ReadWriteMany
   nfs:
-    server: 10.43.248.101
+    server: 10.55.247.179
     path: "/"
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: scidas-cole-test-pvc
+  name: deepgtex-prp
 spec:
   accessModes:
     - ReadWriteMany
   storageClassName: ""
   resources:
     requests:
-      storage: 20Gi
+      storage: 200Gi
