--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,12 +23,13 @@ RUN curl -s https://get.nextflow.io | bash \
 # install nextflow-api
 WORKDIR /opt
 
+RUN pwd
 ADD https://api.github.com/repos/scidas/nextflow-api/git/refs/heads/master version.json
-RUN git  clone -q https://github.com/scidas/nextflow-api.git
+RUN git clone -q https://github.com/scidas/nextflow-api.git
 
 # install python dependencies
 RUN pip3 install -r nextflow-api/requirements.txt
 
 # move to nextflow-api directory
 WORKDIR /opt/nextflow-api
-RUN git   checkout remote-dev
+RUN git checkout remote-dev
