--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -24,7 +24,7 @@ spec:
       serviceAccountName: default
       containers:
       - name: nextflow-server
-        image: cbmckni/nextflow-api:remote-dev
+        image: cbmckni/nextflow-api:dev
         env:
         - name: NEXTFLOW_K8S
           value: "true"
@@ -63,6 +63,7 @@ spec:
         {{ end }}
         ports:
         - containerPort: 8080
+      imagePullPolicy: Always
       volumes:
       {{ if .Values.Remote.Enabled }}
       - name: conf
