--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,8 +23,8 @@ RUN curl -s https://get.nextflow.io | bash \
 # install nextflow-api
 WORKDIR /opt
 
-RUN pwd
-RUN git clone -q https://github.com/scidas/nextflow-api.git
+RUN ls ..
+RUN git clone https://github.com/scidas/nextflow-api.git
 
 # install python dependencies
 RUN pip3 install -r nextflow-api/requirements.txt
