--- a/deploy/003-nextflow-api.yaml
+++ b/deploy/003-nextflow-api.yaml
@@ -25,8 +25,8 @@ spec:
         - -c
         - cd /opt/nextflow-api; scripts/startup.sh
         resources:
-          requests:
-            cpu: 1
+          limits:
+            cpu: 8
             memory: 4Gi
         volumeMounts:
         - name: vol-1
