Added lifecycle hook to backup database before termination

--- a/deploy/003-nextflow-api.yaml
+++ b/deploy/003-nextflow-api.yaml
@@ -33,6 +33,13 @@ spec:
           mountPath: /workspace
         ports:
         - containerPort: 8080
+        lifecycle:
+          preStop:
+            exec:
+              command:
+              - /bin/bash
+              - -c
+              - cd /opt/nextflow-api; scripts/db-backup.sh daily
       volumes:
       - name: vol-1
         persistentVolumeClaim:
