--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -4,7 +4,6 @@
 # PVC
 NewLocalPVC:
   # If true, create new PVC on local cluster.
-  # (temp, future PVCs will be dynamically configurable)
   Enabled: false
   Name: nextflow-api-pvc
   StorageClass: nfs
@@ -12,11 +11,10 @@ NewLocalPVC:
 
 ExistingLocalPVC:
   # If true, use existing PVC on local cluster.
-  # (temp, future PVCs will be dynamically configurable)
   Enabled: true
-  Name: deepgtex-prp
+  Name: scidas-dev
 
-# Remote cluster settings(temp, future will be dynamically configurable)
+
 Remote:
   # If true, use PVC/compute of remote cluster.
   # Otherwise, PVC/compute of local cluster will be used.
@@ -44,7 +42,7 @@ Ingress:
   # and the other settings in this section will be ignored.
   Enabled: true
   # The subdomain to associate with this service.
-  Host: nextflow-api.nautilus.optiputer.net
+  Host: nextflow-api-scidas-dev.nautilus.optiputer.net
   # The class of the ingress controller to use.
   # For SLATE this should be 'slate'.
   Class: traefik
