Added cron package to nextflow-db docker image

--- a/docker/nextflow-db/Dockerfile
+++ b/docker/nextflow-db/Dockerfile
@@ -5,7 +5,7 @@ EXPOSE 27017
 
 # install package dependencies
 RUN apt-get update -qq \
-	&& apt-get install -qq -y git mongodb
+	&& apt-get install -qq -y cron git mongodb
 
 # install nextflow-api
 WORKDIR /opt
