--- a/docker/nextflow-api/Dockerfile
+++ b/docker/nextflow-api/Dockerfile
@@ -3,10 +3,11 @@ FROM ubuntu:18.04
 ENV DEBIAN_FRONTEND=noninteractive
 ENV NXF_VER="19.10.0"
 EXPOSE 8080
+EXPOSE 27017
 
 # install package dependencies
 RUN apt-get update -qq \
-	&& apt-get install -qq -y apt-transport-https apt-utils ca-certificates curl git openjdk-8-jre python3 python3-pip
+	&& apt-get install -qq -y apt-transport-https apt-utils ca-certificates curl git openjdk-8-jre python3 python3-pip cron mongodb
 
 # install kubectl
 RUN apt-get update && apt-get install -y apt-transport-https \
