--- a/helm/templates/nextflow-api.yaml
+++ b/helm/templates/nextflow-api.yaml
@@ -21,7 +21,7 @@ spec:
       serviceAccountName: default
       containers:
       - name: nextflow-api
-        image: bentsherman/nextflow-api
+        image: cbmckni/nextflow-api
         env:
         - name: NXF_EXECUTOR
           value: "k8s"
@@ -41,7 +41,7 @@ spec:
         {{ if .Values.Remote.Enabled }}
         - cd /opt/nextflow-api; cp -R /etc/.kube /root; kubectl config --kubeconfig=/root/.kube/config use-context {{ .Values.Remote.Context }}; kubectl get pods; python3 bin/server.py --db-hostname=nextflow-db
         {{ else }}
-        - cd /opt/nextflow-api; python3 bin/server.py --db-hostname=nextflow-db
+        - ./scripts/db-startup.sh && cd /opt/nextflow-api; python3 bin/server.py --db-hostname=0.0.0.0
         {{ end }}
         resources:
           requests:
@@ -77,7 +77,7 @@ spec:
           claimName: {{ .Values.ExistingLocalPVC.Name }}
       {{ end }}
 ---
-{{ if .Values.Ingress.Enabled }}{{ else }}
+{{ if .Values.LoadBalancer.Enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -126,4 +126,19 @@ spec:
         backend:
           serviceName: nextflow-api
           servicePort: 8080
+{{ end }}
+---
+{{ if .Values.NodePorts.Enabled }}
+apiVersion: v1
+kind: Service
+metadata:  
+  name: nextflow-api
+spec:
+  selector:    
+    app: nextflow-api
+  type: NodePort
+  ports:  
+  - name: nextflow-api
+    port: 8080
+    targetPort: 8080
 {{ end }}
