--- a/helm/templates/nextflow-api.yaml
+++ b/helm/templates/nextflow-api.yaml
@@ -21,7 +21,7 @@ spec:
       serviceAccountName: default
       containers:
       - name: nextflow-api
-        image: cbmckni/nextflow-api
+        image: cbmckni/nextflow-api:relative
         imagePullPolicy: Always
         env:
         - name: NXF_EXECUTOR
