--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -46,7 +46,7 @@ Ingress:
   # and the other settings in this section will be ignored.
   Enabled: false
   # The subdomain to associate with this service.
-  Host: nextflow-api.nautilus.optiputer.net
+  Host: nextflow-api-rel.nautilus.optiputer.net
   # The class of the ingress controller to use.
   # For SLATE this should be 'slate'.
   Class: traefik
